radix-engine-tests/tests/dec_macros/src/pdec_err_too_many_decimal_places.stderr
error: A precise decimal cannot have more than thirty-six decimal places.
 --> src/pdec_err_too_many_decimal_places.rs:4:37
  |
4 |     const X: PreciseDecimal = pdec!(1.0000000000000000000000000000000000001);
  |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
