radix-engine-tests/tests/dec_macros/src/pdec_err_too_many_decimal_places.rs
use radix_common::prelude::*;
use radix_engine_interface::prelude::*;
fn main() {
    const X: PreciseDecimal = pdec!(1.0000000000000000000000000000000000001);
}
